--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12138,4 +12138,6 @@
 
     <!-- Warning message when we try to dock an app not supporting multiple instances split into multiple sides [CHAR LIMIT=NONE] -->
     <string name="dock_multi_instances_not_supported_text">"This app can only be opened in 1 window"</string>
+
+     <string name="saved_networks">Saved Networks</string>
 </resources>
